--- a/styles.css
+++ b/styles.css
@@ -297,7 +297,7 @@ section#assessoria li {
 
 section#atendimento {
   background: linear-gradient(0deg, rgba(0, 0, 0, 0.53) 0%, rgba(0, 0, 0, 0.53) 100%), url("assets/sobre_atendimento_img.jpeg"), lightgray 50% / cover no-repeat;
-  background-attachment: fixed;  
+  background-attachment: fixed;
   box-shadow: inset -5px -5px 5px 0px #0000008f;
   min-height: 430px;
   width: 100%;
@@ -472,6 +472,33 @@ footer .logo img {
   height: 100%;
   opacity: 0.49;
   left: 0;
+}
+
+.img-equipe-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(350px, 1fr));
+  gap: 20px;
+
+  padding: 20px 0;
+}
+
+.image-grid-item {
+  width: calc(100% - 20px);
+  text-align: center;
+  height: auto;
+  overflow: hidden;
+}
+
+.equipe-img-description {
+  padding-top: 10px;
+  color: #fff;
+}
+
+.image-grid-item img {
+  width: 100%;
+  height: auto;
+  object-fit: fill;
+  vertical-align: middle;
 }
 
 @font-face {
