Fix: raise font size

--- a/styles.css
+++ b/styles.css
@@ -492,6 +492,7 @@ footer .logo img {
 .equipe-img-description {
   padding-top: 10px;
   color: #fff;
+  font-size: large;
 }
 
 .image-grid-item img {
