--- a/styles.css
+++ b/styles.css
@@ -508,7 +508,9 @@ footer .logo img {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
+}
 
+.image-shadow {
   box-shadow: inset -5px -5px 100px 0px #0000008f;
 }
 
